Fixed layout bugs. Now trying to add seperation lines

--- a/css/button.css
+++ b/css/button.css
@@ -50,8 +50,9 @@
 	padding: 5px 5px 5px 5px;
 }
 
-.button-img-without-top{
-	width: auto;
+.button-img-mobile{
+	display: inline-block;
+	width: 60px;
 	height: 60px;
 	padding: 0px 5px 5px 5px;
 }
